--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Trigger Central CI/CD Pipeline using repository_dispatch
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for authentication
+          GITHUB_TOKEN: ${{ secrets._DISPATCH_TOKEN }}  # GitHub token for authentication
         run: |
           echo "Triggering repository_dispatch in the 'microservices' repo with the following details:"
           echo "Repository: ${{ github.event.inputs.repo_name }}"
