--- a/dotnet-app.csproj
+++ b/dotnet-app.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework> <!-- Update to .NET 9 -->
     <Nullable>enable</Nullable>
     <UseIIS>False</UseIIS>
   </PropertyGroup>
